kubernetes/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:stable
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: data
              mountPath: /config
            # Overlay static config files from ConfigMap using subPath
            - name: config
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
              readOnly: true
            - name: config
              mountPath: /config/modules
              subPath: modules
              readOnly: true
            - name: dbus
              mountPath: /run/dbus
              readOnly: true
      volumes:
        - name: data
          hostPath:
            path: /home/nas/shared/pvcs/homeassistant
            type: DirectoryOrCreate
        - name: config
          configMap:
            name: config
        - name: dbus
          hostPath:
            path: /run/dbus
            type: Directory
